--- a/css/common.css
+++ b/css/common.css
@@ -30,14 +30,13 @@ html{
 body {
 	font-family: '微软雅黑','Microsoft YaHei';
 	font-size: 14px;
-	line-height: 1.0;
+	line-height: 1.4;
 	width: 100%;
 	height: 100%;
 	background-color: #f4f4f4;
 	/* transition: all 1000ms linear; */
 	/* min-width: 1366px; */
 }
-
 h1,
 h2,
 h3,
@@ -83,5 +82,9 @@ table{
 }
 .alignRight{
 	text-align: right!important;
+}
+a,a:hover,a:link{
+	color: #333;
+	text-decoration: none;
 }
 
