--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,44 @@
+.body0 {
+  min-width: 1200px;
+}
 .header {
   height: 50px;
-  border: 1px solid yellow;
+  background: url('../img/top_bg.png') repeat-x;
+}
+.header .headerMain {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 13px 0;
+  height: 100%;
+}
+.header .HeaderLeftCon {
+  width: 450px;
+  height: 100%;
+}
+.header .HeaderRightCon {
+  width: 267px;
+  height: 100%;
 }
 .section {
-  width: 1160px;
-  margin: 0 auto;
   height: 1065px;
-  border: 1px solid yellow;
+  background: url('../img/bg_02.png') no-repeat;
+  background-size: 100% auto;
+}
+.section .headerSection,
+.section .mainContent {
+  width: 1200px;
+  margin: 0 auto;
 }
 .section .headerSection {
-  height: 145px;
-  border: 1px solid yellow;
+  height: 146px;
+  padding: 40px 0;
 }
 .section .mainContent {
   overflow: hidden;
   padding: 20px;
-  border: 1px solid yellow;
 }
 .section .topSection {
   height: 372px;
-  border: 1px solid yellow;
-  margin-top: 20px;
 }
 .section .centerSection {
   height: 320px;
@@ -38,4 +56,9 @@
 .section .RightRow {
   width: 380px;
   height: 100%;
+  border: 1px solid blue;
+}
+.footer {
+  height: 60px;
+  border: 1px solid blue;
 }
