--- a/css/main.less
+++ b/css/main.less
@@ -1,25 +1,43 @@
+.body0{
+	min-width: 1200px;
+}
 .header{
 	height: 50px;
-	border: 1px solid yellow;
+	background: url('../img/top_bg.png') repeat-x;
+	// border: 1px solid yellow;
+	.headerMain{
+		width: 1200px;
+		margin: 0 auto;
+		padding: 13px 0;
+		height: 100%;
+	}
+	.HeaderLeftCon{
+		width: 450px;
+		height:100%;
+	}
+	.HeaderRightCon{
+		width: 267px;
+		height:100%;
+	}
 }
 .section{
-	width: 1160px;
-	margin: 0 auto;
 	height:1065px;
-	border: 1px solid yellow;
+	background: url('../img/bg_02.png') no-repeat;
+	background-size: 100% auto;
+	.headerSection,.mainContent{
+		width: 1200px;
+		margin: 0 auto;
+	}
 	.headerSection{
-		height:145px;
-		border: 1px solid yellow;
+		height:146px;
+		padding:40px 0;
 	}
 	.mainContent{
 		overflow: hidden;
 		padding: 20px;
-		border: 1px solid yellow;
 	}
 	.topSection{
 		height:372px;
-		border: 1px solid yellow;
-		margin-top: 20px;
 	}
 	.centerSection{
 		height:320px;
@@ -38,5 +56,13 @@
 	.RightRow{
 		width: 380px;
 		height: 100%;
+		border: 1px solid blue;		
 	}
+	
 }
+.footer{
+
+	height: 60px;
+	border: 1px solid blue;
+}
+
