scroll mostly over

--- a/css/index.css
+++ b/css/index.css
@@ -8,8 +8,15 @@
   display: inline-block;
   width: 145px;
   height: 100%;
+  padding: 13px 0;
+}
+.MediaList .MediaLi:hover {
+  background: #fff;
 }
 .MediaList .MediaLi + .MediaLi {
+  margin-left: -4px;
+}
+.MediaList .MediaLi + .MediaLi .MediaLiContent {
   border-left: 1px solid #e2e2e2;
 }
 .MediaList .MediaHref {
@@ -41,7 +48,6 @@
 }
 .MediaList .MediaLi:first-child .IconWeibo {
   left: 7px;
-  top: -6px;
 }
 .MediaList .IconWeibo {
   background: url('../img/weibo.png') no-repeat;
@@ -54,6 +60,9 @@
 .MediaList .IconPhone {
   background: url('../img/phone.png') no-repeat;
   background-size: 100% 100%;
+}
+.HeaderRightCon {
+  padding: 13px 0;
 }
 .HeaderRightCon .MediaHref {
   display: block;
@@ -100,6 +109,10 @@
   background: #fff;
   border-radius: 22px;
 }
+.LoginDiv:hover {
+  transform: translateY(-1px);
+  box-shadow: 0px 2px 5px 3px rgba(27, 28, 51, 0.2);
+}
 .LoginText {
   margin-top: -2px;
   height: 100%;
@@ -108,6 +121,17 @@
   color: #24a2f2;
   font-weight: 700;
   text-align: center;
+}
+.p-after:after {
+  content: "...";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding-left: 40px;
+  background: -webkit-linear-gradient(left, transparent, #fff 55%);
+  background: -moz-linear-gradient(left, transparent, #fff 55%);
+  background: -o-linear-gradient(left, transparent, #fff 55%);
+  background: linear-gradient(to right, transparent, #fff 55%);
 }
 /******mainContent start*******/
 .mainContent {
@@ -133,6 +157,35 @@
   background: #ffffff;
   margin: 1px 3px 1px  1px;
 }
+@media screen and (min-width: 768px) {
+  .selfCarouselCaption {
+    right: 0!important;
+    left: 0!important;
+  }
+}
+.selfCarouselCaption {
+  width: 730px;
+  margin: 0 auto;
+  background: rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  padding: 8px 20px 12px;
+  text-align: left;
+  bottom: 36px;
+}
+.selfCarouselCaption .selfTitle {
+  font-size: 22px;
+  line-height: 38px;
+  color: #fff;
+}
+.selfCarouselCaption .li-heading {
+  font-size: 14px;
+  line-height: 22px;
+  color: #e3e3e3;
+}
+.selfCarouselCaption .headTwoLine.p-after:after {
+  color: #e3e3e3;
+  background: transparent;
+}
 .topSection .RightRow {
   background: #fff;
 }
@@ -141,6 +194,10 @@
 }
 .selfTabs li.selfTab {
   border-bottom: 3px solid #d3ecfc;
+}
+.selfTabs li.selfTab:hover .RightTableDiv {
+  padding: 0 20px!important;
+  display: none;
 }
 .selfTabs li.active > a {
   border-bottom: 3px solid #1d95e0;
@@ -167,6 +224,7 @@
 }
 .RightTableDiv {
   padding: 0 20px!important;
+  display: none;
 }
 .selfTable {
   width: 100%;
@@ -208,17 +266,6 @@
   text-align: left;
   overflow: hidden;
 }
-.p-after:after {
-  content: "...";
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  padding-left: 40px;
-  background: -webkit-linear-gradient(left, transparent, #fff 55%);
-  background: -moz-linear-gradient(left, transparent, #fff 55%);
-  background: -o-linear-gradient(left, transparent, #fff 55%);
-  background: linear-gradient(to right, transparent, #fff 55%);
-}
 .moreDiv {
   height: 35px;
   padding: 10px 0;
@@ -241,8 +288,11 @@
 /******centerSection start*******/
 .centerSection .leftRow .insideRow {
   width: 370px;
-  height: 100%;
-  border: 1px solid red;
+  height: 310px;
+  background: #fff;
+}
+.centerSection .rightRow {
+  background: #fff;
 }
 .moreDiv2 {
   height: 46px;
@@ -254,6 +304,7 @@
 }
 .headLineList {
   overflow: hidden;
+  padding-top: 3px;
 }
 .headLineLi {
   width: 100%;
@@ -261,9 +312,161 @@
   padding: 14px 0;
 }
 .headLineLi .lineMarkIcon {
-  width: 20px;
+  width: 8px;
+  height: 8px;
+  margin-right: 10px;
+  margin-top: 3px;
+  background: url('../img/list_li.png') no-repeat;
 }
 .headLineLi .headLine {
-  width: 236px;
+  width: 220px;
+  line-height: 14px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  -webkit-text-overflow: ellipsis;
+  -moz-text-overflow: ellipsis;
+  white-space: nowrap;
+  color: #333333;
+}
+.headLineLi .date {
+  width: 80px;
+  line-height: 14px;
+  text-align: right;
+  color: #999999;
+}
+.headLineLi + .headLineLi {
+  border-top: 1px dashed #e5ebf2;
+}
+.linkA {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.relativeSystemList .item {
+  width: 380px;
+  height: 70px;
+  margin-bottom: 10px;
+}
+.relativeSystemList .SpecialFunds {
+  background: url('../img/pic1.png') no-repeat;
+}
+.relativeSystemList .WebsiteEditing {
+  background: url('../img/pic2.png') no-repeat;
+}
+.relativeSystemList .SoilEnvironment {
+  background: url('../img/pic3.png') no-repeat;
+}
+.relativeSystemList .NuclearRadiationSafety {
+  background: url('../img/pic4.png') no-repeat;
+}
+/******bottomSection start*******/
+.bottomSection {
+  border: 1px solid #e5ebf2;
+  background: #fff;
+}
+.bottomSection .contentDiv {
+  height: 88px;
+  padding: 21px 20px;
+}
+.selectList {
+  height: 46px;
+  /******selectContent start*******/
+  /******selectContent end*******/
+}
+.selectList .selectLi {
+  height: 46px;
+  width: 210px;
+  border: 1px solid #e5ebf2;
+  padding: 15px 16px;
+  background: #f5f8fb;
+  position: relative;
+}
+.selectList .selectLiTitle {
+  line-height: 14px;
+}
+.selectList .selectLi:hover .selectContent {
+  display: block;
+}
+.selectList .selectLi:hover .downIcon {
+  transform: rotate(0deg);
+}
+.selectList .selectContent {
+  position: absolute;
+  background: #f5f8fb;
+  border: 1px solid #e5ebf2;
+  width: 100%;
+  max-height: 228px;
+  bottom: 45px;
+  left: 0;
+  box-shadow: 0px 0px 7px 4px rgba(143, 194, 225, 0.3);
+}
+.selectList .ContentLi {
+  height: 45px;
+}
+.selectList .ContentLi .linkA {
+  background: #fff;
+  width: 200px;
+  padding: 15px 0 12px 20px;
+  color: #333333;
+  line-height: 14px;
+}
+.selectList .ContentLi:hover .linkA {
+  background: #24a2f2;
+  color: #fff;
+}
+.downIcon {
+  display: inline-block;
+  width: 10px ;
+  height: 6px;
+  position: relative;
+  top: 4px;
+  background: url('../img/friendlylink_xl.png') no-repeat;
+  cursor: pointer;
+  transform: rotate(180deg);
+}
+.border {
+  border: 1px solid yellow;
+}
+.bottomSection .selfTabs {
+  border-bottom: 1px solid #e5ebf2;
 }
 /******section end*******/
+/******footer start*******/
+.footerSection {
+  text-align: center;
+  color: #333;
+  padding: 18px 0;
+}
+.footerText {
+  line-height: 14px;
+}
+.footerText + .footerText {
+  margin-left: 20px;
+}
+/******footer end*******/
+/******滚动条 start*******/
+.mCSB_inside > .mCSB_container {
+  margin-right: 25px;
+}
+.mCSB_scrollTools {
+  background: #ffffff;
+}
+.mCSB_scrollTools .mCSB_draggerRail {
+  width: 7px;
+}
+.mCSB_outside + .mCS-minimal.mCSB_scrollTools_vertical,
+.mCSB_outside + .mCS-minimal-dark.mCSB_scrollTools_vertical {
+  margin: 0;
+  width: 7px;
+}
+.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
+  background-color: rgba(100, 233, 244, 0.9);
+  filter: "alpha(opacity=90)";
+  -ms-filter: "alpha(opacity=90)";
+}
+.mCSB_scrollTools .mCSB_dragger:hover .mCSB_dragger_bar {
+  background-color: #64e9f4;
+  filter: "alpha(opacity=85)";
+  -ms-filter: "alpha(opacity=85)";
+}
