--- a/css/common.css
+++ b/css/common.css
@@ -83,12 +83,12 @@ table{
 .alignRight{
 	text-align: right!important;
 }
-a{
+a,a:link{
 	color: #333;
 	text-decoration: none;
 }
 
-a:hover,a:link{
+a:hover{
 	color: #1a7ee2;
 	text-decoration: none;
 }
