--- a/css/index.css
+++ b/css/index.css
@@ -111,7 +111,7 @@
 }
 .LoginDiv:hover {
   transform: translateY(-1px);
-  box-shadow: 0px 2px 5px 3px rgba(27, 28, 51, 0.2);
+  box-shadow: 0px 2px 12px 2px rgba(11, 115, 203, 0.25);
 }
 .LoginText {
   margin-top: -2px;
@@ -205,7 +205,7 @@
   height: 48px;
 }
 .selfTabs li.selfTab {
-  border-bottom: 3px solid #d3ecfc;
+  border-bottom: 3px solid #e9f3fd;
 }
 .selfTabs li.selfTab:hover .RightTableDiv {
   padding: 0 20px!important;
@@ -287,7 +287,7 @@
   position: relative;
   font-size: 14px;
   line-height: 14px;
-  color: #999999;
+  color: #666;
   text-align: center;
 }
 .more .moreIcon {
@@ -295,23 +295,33 @@
   width: 11px;
   height: 10px;
   background: url('../img/more.png') no-repeat;
-  margin-left: 2px;
+  margin-left: -2px;
+}
+.more:hover {
+  color: #4398ee;
+}
+.more:hover .moreIcon {
+  background: url('../img/more_hover.png') no-repeat;
 }
 /******centerSection start*******/
 .centerSection .leftRow .insideRow {
   width: 370px;
   height: 310px;
   background: #fff;
+  position: relative;
 }
 .centerSection .rightRow {
   background: #fff;
 }
 .moreDiv2 {
+  position: absolute;
+  top: 0;
+  right: 0;
   height: 46px;
   padding: 14px 0;
 }
 .moreDiv2 .more {
-  padding-right: 18px;
+  padding-right: 20px;
   text-align: right;
 }
 .headLineList {
