--- a/css/index.less
+++ b/css/index.less
@@ -118,7 +118,7 @@
 }
 .LoginDiv:hover{
 	transform: translateY(-1px);
-	box-shadow: 0px 2px 5px 3px rgba(27, 28, 51, 0.2);
+	box-shadow: 0px 2px 12px 2px rgba(11, 115, 203, 0.25);
 }
 .LoginText{
 	margin-top: -2px;
@@ -214,7 +214,7 @@
 .selfTabs{
 	height:48px;
 	li.selfTab{
-		border-bottom: 3px solid #d3ecfc;
+		border-bottom: 3px solid #e9f3fd;
 	}
 	li.selfTab:hover{
 		//border:none;
@@ -308,14 +308,20 @@
 	position: relative;
 	font-size: @perFontSize;
 	line-height: @perFontSize;
-	color:@lightTextColor;
+	color:#666;
 	text-align: center;
 	.moreIcon{
 		display: inline-block;
 		width: 11px;
 		height:10px;
 		background: url('../img/more.png') no-repeat;
-		margin-left: 2px;
+		margin-left: -2px;
+	}
+}
+.more:hover{
+	color: rgb(67,152,238);
+    .moreIcon{
+		background: url('../img/more_hover.png') no-repeat;
 	}
 }
 /******centerSection start*******/
@@ -326,6 +332,7 @@
 		width: 370px;
 		height:310px;
 		background: #fff;
+		position: relative;
 	   }
    }
    .rightRow{
@@ -333,10 +340,13 @@
 	}
 }
 .moreDiv2{
+	position: absolute;
+	top: 0;
+	right: 0;
 	height: 46px;
 	padding: 14px 0;
 	.more{
-		padding-right:18px;
+		padding-right:20px;
 		text-align: right;
 	}
 }
@@ -406,7 +416,7 @@
 
 	/******bottomSection start*******/
 .bottomSection{
-   border: 1px solid @splitColor;
+   border:1px solid @splitColor;
    background: #fff;
     .contentDiv{
 		height:88px;
@@ -491,8 +501,6 @@
 .footerSection{
 	text-align: center;
 	color:#333;	
-
-	
 	padding:18px 0;
 }
 .footerText{
