--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,7 @@
   height: 32px;
   left: 13px;
   top: -6px;
+  background: url('../img/sprite.png') no-repeat;
 }
 .MediaList .MediaText {
   margin-left: 52px;
@@ -50,16 +51,13 @@
   left: 7px;
 }
 .MediaList .IconWeibo {
-  background: url('../img/weibo.png') no-repeat;
-  background-size: 100% 100%;
+  background-position: 0 0;
 }
 .MediaList .IconWeixin {
-  background: url('../img/weixin.png') no-repeat;
-  background-size: 100% 100%;
+  background-position: -32px 0;
 }
 .MediaList .IconPhone {
-  background: url('../img/phone.png') no-repeat;
-  background-size: 100% 100%;
+  background-position: -64px 0;
 }
 .HeaderRightCon {
   padding: 13px 0;
@@ -77,6 +75,7 @@
   height: 32px;
   left: 13px;
   top: -6px;
+  background: url('../img/sprite.png') no-repeat;
 }
 .HeaderRightCon .MediaText {
   margin-left: 52px;
@@ -90,8 +89,7 @@
   font-style: normal;
 }
 .HeaderRightCon .IconCal {
-  background: url('../img/date.png') no-repeat;
-  background-size: 100% 100%;
+  background-position: -96px 0;
 }
 /******header end*******/
 /******section start*******/
@@ -260,7 +258,8 @@
   height: 48px;
   text-align: center;
   padding-top: 6px;
-  background: url('../img/part2_date.png') no-repeat;
+  background: url('../img/sprite.png') no-repeat;
+  background-position: 0 -50px;
 }
 .li-left .date {
   font-size: 18px;
@@ -294,14 +293,15 @@
   display: inline-block;
   width: 11px;
   height: 10px;
-  background: url('../img/more.png') no-repeat;
+  background: url('../img/sprite.png') no-repeat;
+  background-position: -24px -32px;
   margin-left: -2px;
 }
 .more:hover {
   color: #4398ee;
 }
 .more:hover .moreIcon {
-  background: url('../img/more_hover.png') no-repeat;
+  background-position: -36px -32px;
 }
 /******centerSection start*******/
 .centerSection .leftRow .insideRow {
@@ -338,7 +338,8 @@
   height: 8px;
   margin-right: 10px;
   margin-top: 7px;
-  background: url('../img/list_li.png') no-repeat;
+  background: url('../img/sprite.png') no-repeat;
+  background-position: -12px -32px;
 }
 .headLineLi .headLine {
   width: 220px;
@@ -444,7 +445,8 @@
   height: 6px;
   position: relative;
   top: 4px;
-  background: url('../img/friendlylink_xl.png') no-repeat;
+  background: url('../img/sprite.png') no-repeat;
+  background-position: 0 -32px;
   cursor: pointer;
   transform: rotate(180deg);
 }
